// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drop DB from github : kosko generate jobs/drop-db --env dev 1`] = `
"apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/nonce: ''
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    component: sample-kosko
    application: sample-kosko
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: drop-azure-db-8843083
spec:
  backoffLimit: 0
  template:
    metadata:
      annotations:
        kapp.k14s.io/deploy-logs: ''
    spec:
      containers:
        - command:
            - drop-db-user
          env:
            - name: DROP_DATABASE
              value: autodevops_e2e-branch
            - name: DROP_USER
              value: user_e2e-branch
          envFrom:
            - secretRef:
                name: azure-pg-admin-user
          image: ghcr.io/socialgouv/docker/azure-db:6.56.0
          imagePullPolicy: IfNotPresent
          name: drop-db-user
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      restartPolicy: Never
  ttlSecondsAfterFinished: 86400"
`;

exports[`drop DB from gitlab : kosko generate jobs/drop-db --env dev 1`] = `
"apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/nonce: ''
    kapp.k14s.io/update-strategy: fallback-on-replace
  labels:
    component: e2e-branch-42-sample-kosko
    application: e2e-branch-42-sample-kosko
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: drop-azure-db-8843083
spec:
  backoffLimit: 0
  template:
    metadata:
      annotations:
        kapp.k14s.io/deploy-logs: ''
    spec:
      containers:
        - command:
            - drop-db-user
          env:
            - name: DROP_DATABASE
              value: autodevops_e2e-branch-42
            - name: DROP_USER
              value: user_e2e-branch-42
          envFrom:
            - secretRef:
                name: azure-pg-admin-user
          image: ghcr.io/socialgouv/docker/azure-db:6.56.0
          imagePullPolicy: IfNotPresent
          name: drop-db-user
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      restartPolicy: Never
  ttlSecondsAfterFinished: 86400"
`;
